@@ -1,3 +1,9 @@
+2001-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (replaceImage): Revised logic so that an inValid
+ 	image should be returned if a NULL pointer is passed.  Before this
+ 	change the existing image was preserved.
+
 2001-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp : Adjusted to ImageMagick animation parameter API change.
